--- a/react-task/src/style.css
+++ b/react-task/src/style.css
@@ -1,3 +1,7 @@
 body {
-    background-color: antiquewhite,
+  background-color: antiquewhite;
+}
+.menu {
+  font-size: 16px;
+  font-weight: bold;
 }
